--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
     <img src="https://airific-more-places-to-stay-compressed.s3-us-west-1.amazonaws.com/Airbnb11.png" class='stickyReserve' alt="sticky" width="60%">
     </div>
 
-    <script type='text/javascript' src="http://localhost:3001/bundle.js"></script>
-    <script type='text/javascript' src="http://localhost:3003/1/bundle.js"></script>
-    <script type='text/javascript' src="http://localhost:3002/1/bundle.js"></script>
+    <script type='text/javascript' src="https://airific-gallery-photos.s3-us-west-1.amazonaws.com/bundle.js"></script>
+    <script type='text/javascript' src="https://airific-review-images.s3.us-east-2.amazonaws.com/bundle.js"></script>
+    <script type='text/javascript' src="https://airific-more-places-to-stay-compressed.s3-us-west-1.amazonaws.com/bundle.js"></script>
   </body>
 </html>
